2007-08-07  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/bouncers/bouncer.py: Doc more.
	(BouncerMedium.remote_keepAlive, Bouncer.keepAlive): Implement
	keepAlive.

	* flumotion/test/test_component_bouncers_bouncer.py
	(TrivialBouncerTest.testKeepAlive): Test for keepAlive.

2007-08-07  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/combiners/switch/switch.py
	  (AVSwitch._set_last_timestamp):
	Add warning message when timestamps of current source differ
	between video and audio by at least 10 seconds, when swicthing
	to new source.

2007-08-07  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/bouncers/bouncer.py
	(Bouncer._scheduleTimeout.timeout, Bouncer.authenticate): 
	* flumotion/test/test_component_bouncers_bouncer.py
	(TrivialBouncerTest.testTimeoutAlgorithm)
	(TrivialBouncerTest.testTimeoutAlgorithm.checkTimeout)
	(TrivialBouncerTest.testTimeoutAlgorithm): s/expiration/ttl/.

	* flumotion/component/bouncers/bouncer.py: Add some module docs.
	(Bouncer.authenticate): Always return a deferred.
	(Bouncer.expireKeycardId): Be nice if we have no medium.

	* flumotion/test/test_component_bouncers_bouncer.py
	(TrivialBouncerTest.testAuthentication)
	(TrivialBouncerTest.testTimeoutAlgorithm): Refactor to assume that
	comp.authenticate() returns a deferred.

	* flumotion/component/bouncers/bouncer.py
	(Bouncer._scheduleTimeout.timeout, Bouncer._unscheduleTimeout):
	Infrastructure to time out keycards automatically if the keycard
	has a "ttl" attribute. Need to add support for resetting keycards'
	TTL values.
	(Bouncer.expireKeycardId): Actually pop out the keycard here,
	instead of waiting for confirmation.
	(Bouncer.expireAllKeycards): With expireKeycardId popping the
	cards, we need to iterate over a copy.
	(TrivialBouncer.do_authenticate): Add the keycard to the bouncer
	set.
	(Bouncer.do_stop): Implement so that we can cancel any pending
	calls.

	* flumotion/test/Makefile.am (EXTRA_DIST): 